<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_task"
            android:icon="@drawable/ic_menu_task"
            android:title="@string/drawer_item_task_title" />
        <item
            android:id="@+id/nav_sync"
            android:icon="@drawable/ic_menu_sync"
            android:title="@string/drawer_item_sync_title" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/drawer_item_settings_title"/>
    </group>

    <item android:title="@string/drawer_item_help_title">
        <menu>
            <item
                android:id="@+id/nav_suggest"
                android:icon="@drawable/ic_menu_suggest"
                android:title="@string/drawer_item_suggest_title" />
            <item
                android:id="@+id/nav_question"
                android:icon="@drawable/ic_menu_question"
                android:title="@string/drawer_item_question_title" />
            <item
                android:id="@+id/nav_update"
                android:icon="@drawable/ic_menu_update"
                android:title="@string/drawer_item_update_title" />
        </menu>
    </item>

</menu>
