<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="net.jsrbc.activity.side.BridgeSideFormActivity"
    tools:showIn="@layout/activity_bridge_side_form">

    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_sm"
        android:orientation="vertical">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/FormInputLabel"
                android:text="@string/bridge_side_form_side_type"/>

            <Spinner
                android:id="@+id/sp_side_type"
                style="@style/FormSpinner"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/margin_sm"
            style="@style/FormInputWrapper">
            <TextView
                style="@style/FormInputLabel"
                android:text="@string/bridge_side_form_stake_no"/>
            <EditText
                android:id="@+id/et_stake_no"
                style="@style/FormInput"
                android:inputType="numberDecimal"
                android:imeOptions="actionNext"
                android:hint="@string/bridge_side_form_stake_no"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/margin_sm"
            style="@style/FormInputWrapper">
            <TextView
                style="@style/FormInputLabel"
                android:text="@string/bridge_side_form_bridge_length"/>
            <EditText
                android:id="@+id/et_bridge_length"
                style="@style/FormInput"
                android:inputType="numberDecimal"
                android:imeOptions="actionNext"
                android:hint="@string/bridge_side_form_bridge_length_hint"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/margin_sm"
            style="@style/FormInputWrapper">
            <TextView
                style="@style/FormInputLabel"
                android:text="@string/bridge_side_form_deck_total_width"/>
            <EditText
                android:id="@+id/et_deck_total_width"
                style="@style/FormInput"
                android:inputType="numberDecimal"
                android:imeOptions="actionNext"
                android:hint="@string/bridge_side_form_deck_total_width_hint"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/margin_sm"
            style="@style/FormInputWrapper">
            <TextView
                style="@style/FormInputLabel"
                android:text="@string/bridge_side_form_lane_width"/>
            <EditText
                android:id="@+id/et_lane_width"
                style="@style/FormInput"
                android:inputType="numberDecimal"
                android:imeOptions="actionNext"
                android:hint="@string/bridge_side_form_lane_width_hint"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/margin_sm"
            style="@style/FormInputWrapper">
            <TextView
                style="@style/FormInputLabel"
                android:text="@string/bridge_side_form_deck_evaluation"/>
            <EditText
                android:id="@+id/et_deck_evaluation"
                style="@style/FormInput"
                android:inputType="numberDecimal"
                android:imeOptions="actionNext"
                android:hint="@string/bridge_side_form_deck_evaluation_hint"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/margin_sm"
            style="@style/FormInputWrapper">
            <TextView
                style="@style/FormInputLabel"
                android:text="@string/bridge_side_form_sub_clear_height"/>
            <EditText
                android:id="@+id/et_sub_clear_height"
                style="@style/FormInput"
                android:inputType="numberDecimal"
                android:imeOptions="actionNext"
                android:hint="@string/bridge_side_form_sub_clear_height_hint"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/margin_sm"
            style="@style/FormInputWrapper">
            <TextView
                style="@style/FormInputLabel"
                android:text="@string/bridge_side_form_super_clear_height"/>
            <EditText
                android:id="@+id/et_super_clear_height"
                style="@style/FormInput"
                android:inputType="numberDecimal"
                android:imeOptions="actionNext"
                android:hint="@string/bridge_side_form_super_clear_height_hint"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/margin_sm"
            style="@style/FormInputWrapper">
            <TextView
                style="@style/FormInputLabel"
                android:text="@string/bridge_side_form_access_total_width"/>
            <EditText
                android:id="@+id/et_access_total_width"
                style="@style/FormInput"
                android:inputType="numberDecimal"
                android:imeOptions="actionNext"
                android:hint="@string/bridge_side_form_access_total_width_hint"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/margin_sm"
            style="@style/FormInputWrapper">
            <TextView
                style="@style/FormInputLabel"
                android:text="@string/bridge_side_form_access_road_width"/>
            <EditText
                android:id="@+id/et_access_road_width"
                style="@style/FormInput"
                android:inputType="numberDecimal"
                android:imeOptions="actionDone"
                android:hint="@string/bridge_side_form_access_road_width_hint"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/margin_sm"
            style="@style/FormInputWrapper">
            <TextView
                style="@style/FormInputLabel"
                android:text="@string/bridge_side_form_access_linear"/>
            <Spinner
                android:id="@+id/sp_access_linear"
                style="@style/FormSpinner"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
