<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginBottom="@dimen/margin_xl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="net.jsrbc.activity.bridge.BridgeActivity"
    tools:showIn="@layout/activity_bridge">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--桥梁分幅-->
        <RelativeLayout
            android:id="@+id/rl_bridge_side"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_sm"
            android:padding="@dimen/padding_md"
            android:background="@drawable/ripple_white"
            android:clickable="true"
            android:focusable="true">
            <TextView
                android:id="@+id/tv_bridge_side_title"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                style="@style/BridgeInfoItemTitle"
                android:text="@string/bridge_title_bridge_side"/>
            <TextView
                android:id="@+id/tv_bridge_side"
                android:layout_toEndOf="@id/tv_bridge_side_title"
                android:layout_centerVertical="true"
                style="@style/BridgeInfoItemText"/>
            <ImageView
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_btn_right"
                tools:ignore="ContentDescription" />
        </RelativeLayout>
        <!--桥梁照片-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="@dimen/padding_md"
            android:paddingEnd="@dimen/padding_md"
            android:paddingTop="@dimen/padding_sm"
            android:paddingBottom="@dimen/padding_sm"
            android:background="@color/white">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="@dimen/text_md"
                android:textStyle="bold"
                android:text="@string/bridge_title_bridge_photo"/>
            <LinearLayout
                android:layout_marginStart="@dimen/margin_md"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/thumbnailSize">
                <android.support.v7.widget.CardView
                    style="@style/BridgeThumbnailWrapper"
                    app:cardCornerRadius="@dimen/radius_sm">
                    <TextView
                        android:id="@+id/tv_no_front_photo"
                        style="@style/NoPhotoTip"
                        android:text="@string/tip_no_front_photo"/>
                    <ImageView
                        android:id="@+id/ib_bridge_front_photo"
                        style="@style/BridgeThumbnail"
                        tools:ignore="ContentDescription" />
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    style="@style/BridgeThumbnailWrapper"
                    app:cardCornerRadius="@dimen/radius_sm">
                    <TextView
                        android:id="@+id/tv_no_side_photo"
                        style="@style/NoPhotoTip"
                        android:text="@string/tip_no_side_photo"/>
                    <ImageView
                        android:id="@+id/ib_bridge_side_photo"
                        style="@style/BridgeThumbnail"
                        tools:ignore="ContentDescription" />
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    style="@style/BridgeThumbnailWrapper"
                    app:cardCornerRadius="@dimen/radius_sm">
                    <TextView
                        android:id="@+id/tv_no_upward_photo"
                        style="@style/NoPhotoTip"
                        android:text="@string/tip_no_upward_photo"/>
                    <ImageView
                        android:id="@+id/ib_bridge_upward_photo"
                        style="@style/BridgeThumbnail"
                        tools:ignore="ContentDescription" />
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </LinearLayout>

        <!--桥梁基本信息-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/margin_sm">
            <!--桥面分离形式-->
            <LinearLayout style="@style/BridgeInfoItemContent">
                <TextView
                    style="@style/BridgeInfoItemTitle"
                    android:text="@string/bridge_title_deck_divide"/>
                <TextView
                    android:id="@+id/tv_bridge_deck_divide"
                    style="@style/BridgeInfoItemText" />
            </LinearLayout>
            <!--路线编号-->
            <LinearLayout style="@style/BridgeInfoItemContent">
                <TextView
                    style="@style/BridgeInfoItemTitle"
                    android:text="@string/bridge_title_road_no"/>
                <TextView
                    android:id="@+id/tv_road_no"
                    style="@style/BridgeInfoItemText"/>
            </LinearLayout>
            <!--路线名称-->
            <LinearLayout style="@style/BridgeInfoItemContent">
                <TextView
                    style="@style/BridgeInfoItemTitle"
                    android:text="@string/bridge_title_road_name"/>
                <TextView
                    android:id="@+id/tv_road_name"
                    style="@style/BridgeInfoItemText"/>
            </LinearLayout>
            <!--路线等级-->
            <LinearLayout style="@style/BridgeInfoItemContent">
                <TextView
                    style="@style/BridgeInfoItemTitle"
                    android:text="@string/bridge_title_road_level"/>
                <TextView
                    android:id="@+id/tv_road_level"
                    style="@style/BridgeInfoItemText"/>
            </LinearLayout>
            <!--所在地市-->
            <LinearLayout style="@style/BridgeInfoItemContent">
                <TextView
                    style="@style/BridgeInfoItemTitle"
                    android:text="@string/bridge_title_address"/>
                <TextView
                    android:id="@+id/tv_address"
                    style="@style/BridgeInfoItemText"/>
            </LinearLayout>
            <!--管养单位-->
            <LinearLayout style="@style/BridgeInfoItemContent">
                <TextView
                    style="@style/BridgeInfoItemTitle"
                    android:text="@string/bridge_title_units_name"/>
                <TextView
                    android:id="@+id/tv_units_name"
                    style="@style/BridgeInfoItemText"/>
            </LinearLayout>
            <!--桥梁分类-->
            <LinearLayout style="@style/BridgeInfoItemContent">
                <TextView
                    style="@style/BridgeInfoItemTitle"
                    android:text="@string/bridge_title_bridge_category"/>
                <TextView
                    android:id="@+id/tv_bridge_category"
                    style="@style/BridgeInfoItemText"/>
            </LinearLayout>
            <!--建成年限-->
            <LinearLayout style="@style/BridgeInfoItemContent">
                <TextView
                    style="@style/BridgeInfoItemTitle"
                    android:text="@string/bridge_title_build_date"/>
                <TextView
                    android:id="@+id/tv_bridge_build_date"
                    style="@style/BridgeInfoItemText"/>
            </LinearLayout>
            <!--上次评定等级-->
            <LinearLayout style="@style/BridgeInfoItemContent">
                <TextView
                    style="@style/BridgeInfoItemTitle"
                    android:text="@string/bridge_title_bridge_evaluation"/>
                <TextView
                    android:id="@+id/tv_bridge_level"
                    style="@style/BridgeInfoItemText"/>
            </LinearLayout>
            <!--上次检查时间-->
            <LinearLayout style="@style/BridgeInfoItemContent">
                <TextView
                    style="@style/BridgeInfoItemTitle"
                    android:text="@string/bridge_title_inspection_date"/>
                <TextView
                    android:id="@+id/tv_inspection_date"
                    style="@style/BridgeInfoItemText"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
