<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="net.jsrbc.activity.member.SiteRangeFormActivity"
    tools:showIn="@layout/activity_site_range_form">
    <TextView
        android:layout_margin="@dimen/margin_sm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_sm"
        android:text="输入孔跨范围"
        tools:ignore="HardcodedText" />
    <LinearLayout
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:background="@color/white"
            android:padding="@dimen/padding_sm"
            style="@style/FormInputWrapper">
            <TextView
                style="@style/FormInputLabel"
                android:text="@string/label_start_no"/>
            <EditText
                android:id="@+id/et_start_site_no"
                style="@style/FormInput"
                android:inputType="number"
                android:imeOptions="actionNext"
                android:hint="@string/hint_start_no"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/margin_tiny"
            android:background="@color/white"
            android:padding="@dimen/padding_sm"
            style="@style/FormInputWrapper">
            <TextView
                style="@style/FormInputLabel"
                android:text="@string/label_end_no"/>
            <EditText
                android:id="@+id/et_end_site_no"
                style="@style/FormInput"
                android:inputType="number"
                android:imeOptions="actionDone"
                android:hint="@string/hint_end_no"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
